--- a/style.css
+++ b/style.css
@@ -18,26 +18,29 @@ nav a {
   padding-right: 10px;
 }
 
-#featured-property {
+body {
+  width:100%
+  height:100%
+  margin:0%
+}
+
+section {
   text-align: center;
-  margin:auto
-  
 }
-
-#featured-property p {
-  text-align: center;
- 
-}
-
-#details {
-  background-color: maroon;
-  float:left
-}
-
 
 
 #details div {
   float:left
-  color:red
+}
+
+#featured-property p {
+  width: 800px;
+  text-align: center;
   
+}
+
+body div {
+  text-align: center;
+  background-color: red;
+  width:25%
 }
